--- a/slides/isomorphic-PWA.html
+++ b/slides/isomorphic-PWA.html
@@ -37,11 +37,12 @@
         <section>
             <div data-markdown class="col-md-12">
                 <script type="text/template">
-                    ## Guntars Simanskis
+                    ## Firebase as Hosting
                     Scalable JavaScript, PWA (Progressive Web Applications).
 
                     <small>Guntars Simanskis [Twitter](https://twitter.com/simanskis),
-                        [Github](https://github.com/gunins)
+                        [Github](https://github.com/gunins),
+                        Andris Svarcs, Raitis Linde
                     </small>
                 </script>
             </div>
