--- a/slides/isomorphic-PWA.html
+++ b/slides/isomorphic-PWA.html
@@ -37,7 +37,7 @@
         <section>
             <div data-markdown class="col-md-12">
                 <script type="text/template">
-                    ## Firebase as Hosting
+                    ## Firebase Hosting and PWA
                     Scalable JavaScript, PWA (Progressive Web Applications).
 
                     <small>Guntars Simanskis [Twitter](https://twitter.com/simanskis),
