--- a/slides/isomorphic-PWA.html
+++ b/slides/isomorphic-PWA.html
@@ -500,6 +500,14 @@
                 </script>
             </div>
         </section>
+        <section>
+            <div data-markdown class="col-md-12">
+                <script type="text/template">
+                    ## Unit Tests
+
+                </script>
+            </div>
+        </section>
     </div>
 </div>
 <script src="../node_modules/reveal.js/lib/js/head.min.js"></script>
